<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
<LinearLayout
    style="@style/questionText"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/hat_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hattrick"
            android:onClick="firstRadioButton"
            />
        <RadioButton
            android:id="@+id/bowl_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bowltrick"
            android:onClick="firstRadioButton"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/answer1"
        style="@style/answerText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
<TextView
    style="@style/questionText"
    android:text="@string/question2" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/hgibbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hgibbs"
        android:onClick="secondRadioButton"
        />
    <RadioButton
        android:id="@+id/yuvi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuvi"
        android:onClick="secondRadioButton"
        />
        <RadioButton
            android:id="@+id/msdhoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msdhoni"
            android:onClick="secondRadioButton"
            />
        <RadioButton
            android:id="@+id/chris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chris"
            android:onClick="secondRadioButton"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/answer2"
        style="@style/answerText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <TextView
        style="@style/questionText"
        android:text="@string/question3"
        />
    <CheckBox
        android:id="@+id/checkb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/india"
        android:onClick="checkFunction"
        />
    <CheckBox
        android:id="@+id/checkb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/england"
        android:onClick="checkFunction"
        />
    <CheckBox
        android:id="@+id/checkb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/south_africa"
        android:onClick="checkFunction"
        />
    <CheckBox
        android:id="@+id/checkb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:onClick="checkFunction"
        />
    <TextView
        android:id="@+id/answer3"
        style="@style/answerText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <TextView
        style="@style/questionText"
        android:text="@string/question4" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/ricky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ricky"
            android:onClick="thirdRadioButton"
            />
        <RadioButton
            android:id="@+id/kumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kumar"
            android:onClick="thirdRadioButton"
            />
        <RadioButton
            android:id="@+id/sachin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sachin"
            android:onClick="thirdRadioButton"
            />
        <RadioButton
            android:id="@+id/clarke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clarke"
            android:onClick="thirdRadioButton"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/answer4"
        style="@style/answerText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <TextView
        style="@style/questionText"
        android:text="@string/question5"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:onClick="fourthRadioButton"
            />
        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:onClick="fourthRadioButton"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/answer5"
        style="@style/answerText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <TextView
        style="@style/questionText"
        android:text="@string/question6"/>
    <EditText
        android:id="@+id/firstEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Answer"
        android:onClick="editFunction"
        />
    <TextView
        android:id="@+id/answer6"
        style="@style/answerText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Submit"
        android:onClick="submitQuiz"/>
</LinearLayout>
</ScrollView>